--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="logo-2">
                             <img src="images/logo-2.png"/>
                         </div>
-                        <h1>I Am <span class="element" data-text1="Nithin Joy" data-text2="Creative" data-text3="a Web Designer" data-text4="a Web Devolper" data-loop="true" data-backdelay="3000"></span></h1> 
+                        <h1>I Am <span class="element" data-text1="Nithin Joy" data-text2="Creative" data-text3="a Web Designer" data-text4="a Web Devoloper" data-loop="true" data-backdelay="3000"></span></h1> 
                         <div class="social">
                             <a class="fb" href="https://www.facebook.com/Iamnithinjoy-2250459238543866"><i class="fa fa-facebook" aria-hidden="true"></i></a> 
                             <!-- <a class="tw" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>  -->
