--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-6643846458448446",
+    enable_page_level_ads: true
+  });
+</script>
+
 </head>
 <body class="diag">
     
